--- a/plan/Makefile
+++ b/plan/Makefile
@@ -1,8 +1,8 @@
 LATEX=pdflatex
-DOC=plan.tex
 
 all:
-	$(LATEX) $(DOC)
+	$(LATEX) plan.tex
+	$(LATEX) toc.tex
 
 clean:
 	rm -f *~ *.log *.aux *.toc *.out *.pdf
