--- a/thesis/Makefile
+++ b/thesis/Makefile
@@ -1,8 +1,14 @@
-all:
-	pdflatex thesis.tex
-	bibtex thesis
-	pdflatex thesis.tex
-	pdflatex thesis.tex
+TEX=pdflatex
+BIBTEX=bibtex
+DOC=thesis.tex
+SOURCES=sources.bib
+BIBDOC=thesis
+
+all: $(DOC) $(SOURCES)
+	$(TEX) $(DOC)
+	$(BIBTEX) $(BIBDOC)
+	$(TEX) $(DOC)
+	$(TEX) $(DOC)
 
 clean:
 	rm -f *.aux *.log *.out *.toc *.bbl *.blg
